[project]
name = "gauge-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
